--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "5.3.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
