--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive-modal": "^6.4.1",
     "react-router-dom": "5.3.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
@@ -46,5 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }  
+  }
 }
